# rekarel-cpp-interpreter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  dlopen.cpp  json.cpp  json.h  karel.cpp  karel.h  karel.html  karel_wasm_main.cpp  kcl.cpp  logging.cpp  logging.h  macros.h  main.cpp  test.java.sh  test.pascal.sh  test.rte.sh  test.sh  unit_test.sh  util.cpp  util.h  world.cpp  world.h  xml.cpp  xml.h
tests/: CMakeLists.txt  test_karel.cpp
